Closed Bug 1703724 Opened 3 years ago Closed 3 years ago

Don't set the color space on macOS HW decoded video.

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

(Regressed 1 open bug)

Details

Attachments

(1 file)

It is already set by VideoCore to a profile with 1.9 gamma. This causes
hw decoded video to have a different color profile than software decoded
video which isn't ideal but matches what happens in Chrome.

It is already set by VideoCore to a profile with 1.9 gamma. This causes
hw decoded video to have a different color profile than software decoded
video which isn't ideal but matches what happens in Chrome.

Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5a9d146f18a0
Don't set the color space on macOS HW decoded video. r=mattwoodrow

I was hoping this would help with bug 1658058 but it doesn't seem to.

Regressions: 1703887
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
See Also: → 1697265
See Also: → 1747999
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: