Bug 1703724 - Don't set the color space on macOS HW decoded video. r=mattwoodrow

It is already set by VideoCore to a profile with 1.9 gamma.  This causes
hw decoded video to have a different color profile than software decoded
video which isn't ideal but matches what happens in Chrome.

Differential Revision: https://phabricator.services.mozilla.com/D111218